--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/configure-pages@v5
 
       - name: Build with Hugo
-        run: hugo --gc --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
+        run: hugo --gc --minify --baseURL "https://jiaoyuan.org/"
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
